# macro_financial_screener

./: .gitignore  AGENTS.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py  models.py  refresh.py
backend/app/metrics/: registry.py  status.py
backend/app/sources/: fred.py  pmi_proxy.py  sentiment.py  shiller.py
backend/app/store/: base.py  sqlite.py
backend/tests/: conftest.py  test_api.py  test_downsample.py  test_fred.py  test_health.py  test_overlay.py  test_pmi_proxy.py  test_refresh.py  test_registry.py  test_sentiment.py  test_shiller.py  test_status.py  test_store.py
frontend/: Dockerfile  next.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: FearGreedGauge.tsx  MetricCard.tsx  MetricChart.tsx  RadarChart.tsx  RiskBanner.tsx  StatusBadge.tsx  ThemeToggle.tsx
frontend/lib/: api.ts  events.ts  faq.tsx  format.ts  sentiment.ts  types.ts
scripts/: run-frontend.sh
